Settings: Allow to quickly open Running Services from meminfo view
@neobuddy89: Updated for A12.

Change-Id: I252ce85bda3daab5c5e4db097a6fd743365bc309
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: Alvin Francis <nivlafx@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -24,4 +24,7 @@
     <!-- CodeLinaro Revision -->
     <string name="codelinaro_revision">CodeLinaro Revision</string>
 
+    <!-- Running services - Background processes tab -->
+    <string name="background_processes_settings_title">Background processes</string>
+
 </resources>
