Settings: Expose radio info (*#*#4636#*#*)
idoybh edits: Move to about phone in settings

Signed-off-by: Omkar Chandorkar <gotenksIN@aosip.dev>
Change-Id: I7cf1ee8685749212ddeee9b4e7135af3185f78b8
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -37,4 +37,7 @@
     <string name="private_dns_mode_google" translatable="false">Google DNS</string>
     <string name="private_dns_hostname_google" translatable="false">dns.google</string>
 
+    <!-- Radio Info -->
+    <string name="radio_info_title">Radio info</string>
+
 </resources>
