Settings: Add window ignore secure feature [2/2]
 - Move it to privacy settings

Feature: yt/KSCOPE-23
Change-Id: Ibdd7406a3e59373813c9a98233e6c04b8554d618
Signed-off-by: Karan Parashar <whyredfire@gmail.com>
[ghostrider-reborn: improve strings]
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -172,4 +172,8 @@
     <string name="copied_to_clipboard">Copied to clipboard</string>
     <string name="longpress_to_clipboard">Long-press to copy</string>
 
+    <!-- Ignore window secure -->
+    <string name="ignore_window_secure_title">Ignore window secure flags</string>
+    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
+
 </resources>
