--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -184,4 +184,8 @@
     <string name="network_traffic_autohide_title">Auto-hide</string>
     <string name="network_traffic_autohide_summary">Hide when speed is below 1 KB/s</string>
 
+    <!-- Hide developer status -->
+    <string name="hide_developer_status_title">Hide developer status</string>
+    <string name="hide_developer_status_summary">Hide developer status from apps</string>
+
 </resources>
