settings: Add CodeLinaro Revision on About Phone
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -21,4 +21,7 @@
     <!-- RvOS Version -->
     <string name="rvos_version">RvOS version</string>
 
+    <!-- CodeLinaro Revision -->
+    <string name="codelinaro_revision">CodeLinaro Revision</string>
+
 </resources>
