settings: Add RvOS Version on About Phone
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -18,4 +18,7 @@
     <!-- RvOS Maintainer -->
     <string name="rvos_maintainer">Maintainer</string>
 
+    <!-- RvOS Version -->
+    <string name="rvos_version">RvOS version</string>
+
 </resources>
