--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -59,13 +59,13 @@
 	    android:summary="@string/summary_placeholder"
 	    settings:controller="com.android.settings.deviceinfo.firmwareversion.RvOSMaintainerPreferenceController"/>
 
-        <!-- Paranoid Android version -->
+        <!-- RvOS Version -->
         <Preference
-            android:key="aospa_version"
+            android:key="rvos_version"
             android:order="4"
-            android:title="@string/aospa_version"
+            android:title="@string/rvos_version"
             android:summary="@string/summary_placeholder"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.ParanoidAndroidVersionPreferenceController"/>
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.RvOSVersionPreferenceController"/>
 
         <!-- Account name -->
         <Preference
