--- a/res/layout/private_dns_mode_dialog.xml
+++ b/res/layout/private_dns_mode_dialog.xml
@@ -43,6 +43,10 @@
                 android:id="@+id/private_dns_mode_adguard"
                 layout="@layout/preference_widget_dialog_radiobutton"/>
 
+	    <include
+		android:id="@+id/private_dns_mode_google"
+		layout="@layout/preference_widget_dialog_radiobutton"/>
+
             <include
                 android:id="@+id/private_dns_mode_opportunistic"
                 layout="@layout/preference_widget_dialog_radiobutton"/>
