--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -34,4 +34,7 @@
     <string name="private_dns_mode_adguard" translatable="false">AdGuard DNS</string>
     <string name="private_dns_hostname_adguard" translatable="false">dns.adguard.com</string>
 
+    <string name="private_dns_mode_google" translatable="false">Google DNS</string>
+    <string name="private_dns_hostname_google" translatable="false">dns.google</string>
+
 </resources>
