Settings: Move radio info to device identifiers category
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -102,16 +102,6 @@
             settings:keywords="@string/keywords_model_and_hardware"
             settings:controller="com.android.settings.deviceinfo.HardwareInfoPreferenceController"/>
 
-        <Preference
-            android:title="@string/radio_info_title"
-            android:key="radio_info_settings"
-            android:order="6"
-            settings:controller="com.android.settings.deviceinfo.RadioInfoPreferenceController">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.android.phone"
-                    android:targetClass="com.android.phone.settings.RadioInfo" />
-        </Preference>
-
         <!-- SIM status -->
         <Preference
             android:key="sim_status"
@@ -152,6 +142,15 @@
             android:summary="@string/summary_placeholder"
             android:selectable="false"
             settings:enableCopying="true"/>
+
+	<Preference
+            android:title="@string/radio_info_title"
+            android:key="radio_info_settings"
+            android:order="6">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.phone"
+                    android:targetClass="com.android.phone.settings.RadioInfo" />
+         </Preference>
 
         <!-- Bluetooth address -->
         <Preference
