Settings: Add radio info summary
Signed-off-by: Rve27 <rve27github@gmail.com>

--- a/res/values/rvos_strings.xml
+++ b/res/values/rvos_strings.xml
@@ -39,5 +39,6 @@
 
     <!-- Radio Info -->
     <string name="radio_info_title">Radio info</string>
+    <string name="radio_info_summary">Device network testing menu</string>
 
 </resources>
