--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -144,9 +144,10 @@
             settings:enableCopying="true"/>
 
 	<Preference
+	    android:key="radio_info_settings"
+	    android:order="6"
             android:title="@string/radio_info_title"
-            android:key="radio_info_settings"
-            android:order="6">
+	    android:summary="@string/radio_info_summary">
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="com.android.phone"
                     android:targetClass="com.android.phone.settings.RadioInfo" />
